Reload lock screen apps after app crash

Adds logic to lock_screen_app::AppManagerImpl to handle note taking
unload/uninstall from the lock screen apps profile.

If the app is unloaded due to it being terminated (which could happen
if the app render process crashes), the lock screen note taking will
remain being available - the internal AppManagerImpl state will not
change, and the app will be reloaded in the lock screen apps profile
when the app launch is next requested (the number of reload attempts
within a lock session will be bounded).

If the app is unloaded for any other reason, or uninstalled, the note
taking will be disabled until the app manager is restarted.

Bug: 775702

Change-Id: Iac67eb509168c0f9193ad37c2f74787c979652a3
Reviewed-on: https://chromium-review.googlesource.com/802697
Reviewed-by: Gayane Petrosyan <gayane@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Toni Barzic <tbarzic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525625}
Former-commit-id: 9095c93718c77f437ed7be13ebf05068db8031fd