chrome/browser/chromeos/lock_screen_apps/app_manager_impl.cc
@@ -43,6 +43,10 @@ namespace {
 using ExtensionCallback = base::Callback<void(
     const scoped_refptr<const extensions::Extension>& extension)>;
 
+// The max number of times the lock screen app can be relaoded if it gets
+// terminated while the lock screen is active.
+constexpr int kMaxLockScreenAppReloadsCount = 3;
+
 // The lock screen note taking availability state.
 // Used to report UMA histograms - the values should map to
 // LockScreenActionAvailability UMA enum values, and the values assigned to
@@ -55,6 +59,18 @@ enum class ActionAvailability {
   kDisallowedByPolicy = 4,
   kLockScreenProfileNotCreated = 5,
   kCount,
+};
+
+// The reason the note taking app was unloaded from the lock screen apps
+// profile.
+// Used to report UMA histograms - the values should map to
+// LockScreenAppUnloadStatus UMA enum values, and the values assigned to
+// enum states should NOT be changed.
+enum class AppUnloadStatus {
+  kNotTerminated = 0,
+  kTerminatedReloadable = 1,
+  kTerminatedReloadAttemptsExceeded = 2,
+  kCount = 3
 };
 
 ActionAvailability GetLockScreenNoteTakingAvailability(
@@ -152,6 +168,7 @@ void InstallExtensionCopy(
 AppManagerImpl::AppManagerImpl(base::TickClock* tick_clock)
     : tick_clock_(tick_clock),
       extensions_observer_(this),
+      lock_screen_profile_extensions_observer_(this),
       note_taking_helper_observer_(this),
       weak_ptr_factory_(this) {}
 
@@ -201,11 +218,12 @@ void AppManagerImpl::Start(const base::Closure& note_taking_changed_callback) {
   DCHECK_NE(State::kNotInitialized, state_);
 
   note_taking_changed_callback_ = note_taking_changed_callback;
+
+  if (state_ == State::kActive || state_ == State::kActivating)
+    return;
+
   extensions_observer_.Add(
       extensions::ExtensionRegistry::Get(primary_profile_));
-
-  if (state_ == State::kActive)
-    return;
 
   lock_screen_app_id_.clear();
   std::string app_id = FindLockScreenNoteTakingApp();
@@ -224,6 +242,7 @@ void AppManagerImpl::Stop() {
 
   note_taking_changed_callback_.Reset();
   extensions_observer_.RemoveAll();
+  available_lock_screen_app_reloads_ = 0;
 
   if (state_ == State::kInactive)
     return;
@@ -247,12 +266,14 @@ bool AppManagerImpl::LaunchNoteTaking() {
   if (!IsNoteTakingAppAvailable())
     return false;
 
-  const extensions::ExtensionRegistry* extension_registry =
-      extensions::ExtensionRegistry::Get(lock_screen_profile_);
-  const extensions::Extension* app = extension_registry->GetExtensionById(
-      lock_screen_app_id_, extensions::ExtensionRegistry::ENABLED);
-  if (!app)
+  const extensions::Extension* app = GetAppForLockScreenAppLaunch();
+  // If the app cannot be found at this point, it either got unexpectedly
+  // disabled, or it failed to reload (in case it was previously terminated).
+  // In either case, note taking should not be reported as available anymore.
+  if (!app) {
+    RemoveLockScreenAppDueToError();
     return false;
+  }
 
   auto action_data =
       base::MakeUnique<extensions::api::app_runtime::ActionData>();
@@ -269,8 +290,9 @@ bool AppManagerImpl::LaunchNoteTaking() {
 
 void AppManagerImpl::OnExtensionLoaded(content::BrowserContext* browser_context,
                                        const extensions::Extension* extension) {
-  if (extension->id() ==
-      primary_profile_->GetPrefs()->GetString(prefs::kNoteTakingAppId)) {
+  if (browser_context == primary_profile_ &&
+      extension->id() ==
+          primary_profile_->GetPrefs()->GetString(prefs::kNoteTakingAppId)) {
     OnNoteTakingExtensionChanged();
   }
 }
@@ -279,8 +301,26 @@ void AppManagerImpl::OnExtensionUnloaded(
     content::BrowserContext* browser_context,
     const extensions::Extension* extension,
     extensions::UnloadedExtensionReason reason) {
-  if (extension->id() == lock_screen_app_id_)
+  if (extension->id() != lock_screen_app_id_)
+    return;
+
+  if (browser_context == primary_profile_) {
     OnNoteTakingExtensionChanged();
+  } else if (browser_context == lock_screen_profile_) {
+    HandleLockScreenAppUnload(reason);
+  }
+}
+
+void AppManagerImpl::OnExtensionUninstalled(
+    content::BrowserContext* browser_context,
+    const extensions::Extension* extension,
+    extensions::UninstallReason reason) {
+  // If the app is uninstalled from the lock screen apps profile, make sure
+  // it's not reported as available anymore.
+  if (browser_context == lock_screen_profile_ &&
+      extension->id() == lock_screen_app_id_) {
+    RemoveLockScreenAppDueToError();
+  }
 }
 
 void AppManagerImpl::OnAvailableNoteTakingAppsUpdated() {}
@@ -433,11 +473,18 @@ void AppManagerImpl::InstallAndEnableLockScreenAppInLockScreenProfile(
   lock_screen_service->OnExtensionInstalled(
       app, syncer::StringOrdinal(), extensions::kInstallFlagInstallImmediately);
   lock_screen_service->EnableExtension(app->id());
+
+  available_lock_screen_app_reloads_ = kMaxLockScreenAppReloadsCount;
+
+  lock_screen_profile_extensions_observer_.Add(
+      extensions::ExtensionRegistry::Get(lock_screen_profile_));
 }
 
 void AppManagerImpl::RemoveAppFromLockScreenProfile(const std::string& app_id) {
   if (app_id.empty())
     return;
+
+  lock_screen_profile_extensions_observer_.RemoveAll();
 
   extensions::ExtensionRegistry* lock_screen_registry =
       extensions::ExtensionRegistry::Get(lock_screen_profile_);
@@ -451,6 +498,104 @@ void AppManagerImpl::RemoveAppFromLockScreenProfile(const std::string& app_id) {
       ->extension_service()
       ->UninstallExtension(
           app_id, extensions::UNINSTALL_REASON_INTERNAL_MANAGEMENT, &error);
+}
+
+const extensions::Extension* AppManagerImpl::GetAppForLockScreenAppLaunch() {
+  const extensions::ExtensionRegistry* extension_registry =
+      extensions::ExtensionRegistry::Get(lock_screen_profile_);
+
+  // Return the app, in case it's currently loaded.
+  const extensions::Extension* app = extension_registry->GetExtensionById(
+      lock_screen_app_id_, extensions::ExtensionRegistry::ENABLED);
+  if (app) {
+    ReportAppStatusOnAppLaunch(AppStatus::kEnabled);
+    return app;
+  }
+
+  // If the app has been terminated (which can happen due to an app crash),
+  // attempt a reload - otherwise, return nullptr to signal the app is
+  // unavailable.
+  app =
+      extension_registry->terminated_extensions().GetByID(lock_screen_app_id_);
+  if (!app) {
+    ReportAppStatusOnAppLaunch(AppStatus::kNotLoadedNotTerminated);
+    return nullptr;
+  }
+
+  if (available_lock_screen_app_reloads_ <= 0) {
+    ReportAppStatusOnAppLaunch(AppStatus::kTerminatedReloadLimitExceeded);
+    return nullptr;
+  }
+
+  available_lock_screen_app_reloads_--;
+
+  std::string error;
+  scoped_refptr<extensions::Extension> lock_profile_app =
+      extensions::Extension::Create(app->path(), app->location(),
+                                    *app->manifest()->value()->CreateDeepCopy(),
+                                    app->creation_flags(), app->id(), &error);
+
+  ExtensionService* extension_service =
+      extensions::ExtensionSystem::Get(lock_screen_profile_)
+          ->extension_service();
+  extension_service->AddExtension(lock_profile_app.get());
+  extension_service->EnableExtension(lock_profile_app->id());
+
+  app = extension_registry->GetExtensionById(
+      lock_screen_app_id_, extensions::ExtensionRegistry::ENABLED);
+
+  ReportAppStatusOnAppLaunch(app ? AppStatus::kAppReloaded
+                                 : AppStatus::kAppReloadFailed);
+  return app;
+}
+
+void AppManagerImpl::ReportAppStatusOnAppLaunch(AppStatus status) {
+  UMA_HISTOGRAM_ENUMERATION(
+      "Apps.LockScreen.NoteTakingApp.AppStatusOnNoteLaunch", status,
+      AppStatus::kCount);
+}
+
+void AppManagerImpl::HandleLockScreenAppUnload(
+    extensions::UnloadedExtensionReason reason) {
+  if (state_ != State::kActive && state_ != State::kActivating)
+    return;
+
+  AppUnloadStatus status = AppUnloadStatus::kNotTerminated;
+  if (reason == extensions::UnloadedExtensionReason::TERMINATE) {
+    status = available_lock_screen_app_reloads_ > 0
+                 ? AppUnloadStatus::kTerminatedReloadable
+                 : AppUnloadStatus::kTerminatedReloadAttemptsExceeded;
+  }
+  UMA_HISTOGRAM_ENUMERATION(
+      "Apps.LockScreen.NoteTakingApp.LockScreenAppUnloaded", status,
+      AppUnloadStatus::kCount);
+
+  // If the app is terminated, it will be reloaded on the next app launch
+  // request - if the app cannot be reloaded (e.g. if it was unloaded for a
+  // different reason, or it was reloaded too many times already), change the
+  // app managet to an error state. This will inform the app manager's user
+  // that lock screen note action is not available anymore.
+  if (status != AppUnloadStatus::kTerminatedReloadable)
+    RemoveLockScreenAppDueToError();
+
+  if (status != AppUnloadStatus::kNotTerminated) {
+    UMA_HISTOGRAM_ENUMERATION(
+        "Apps.LockScreen.NoteTakingApp.ReloadCountOnAppTermination",
+        kMaxLockScreenAppReloadsCount - available_lock_screen_app_reloads_,
+        kMaxLockScreenAppReloadsCount + 1);
+  }
+}
+
+void AppManagerImpl::RemoveLockScreenAppDueToError() {
+  if (state_ != State::kActive && state_ != State::kActivating)
+    return;
+
+  RemoveAppFromLockScreenProfile(lock_screen_app_id_);
+  lock_screen_app_id_.clear();
+  state_ = State::kInactive;
+
+  if (!note_taking_changed_callback_.is_null())
+    note_taking_changed_callback_.Run();
 }
 
 }  // namespace lock_screen_apps
